--- a/Assignment2/package.json
+++ b/Assignment2/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^17.0.1",
     "express": "^4.21.2",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.16.1",
     "morgan": "~1.9.1"
   }
 }
