--- a/Assignment2/package.json
+++ b/Assignment2/package.json
@@ -10,9 +10,12 @@
     "debug": "~2.6.9",
     "dotenv": "^17.0.1",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
-    "mongoose": "^8.16.1",
-    "morgan": "~1.9.1"
+    "mongoose": "^8.16.2",
+    "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
