--- a/Assignment2/package.json
+++ b/Assignment2/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^17.0.1",
@@ -14,11 +15,13 @@
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.16.2",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
+    "movie-info": "^3.0.2",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "tmdb-tv": "^1.1.0"
   }
 }
